# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  browser-automation.html  changelog.html  cloud-deploy.html  configuration.html  e2e-testing.html  hooks.html  index.html  justfile  local-validation.html  print.html  providers.html  quickstart.html  railway.json  searchindex.js  security.html  streaming.html  toc.html  toc.js  voice.html
.github/workflows/: docs.yml  e2e.yml
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  prompt.rs  response_sanitizer.rs  runner.rs  tool_registry.rs
crates/agents/src/providers/: gemini_oauth.rs  mod.rs
crates/benchmarks/: Cargo.toml
crates/browser/src/: types.rs
crates/channels/src/: lib.rs  plugin.rs
crates/cli/: Cargo.toml
crates/common/src/: lib.rs  shell_hook.rs
crates/config/: Cargo.toml
crates/config/src/: agent_defs.rs  lib.rs  loader.rs  schema.rs  validate.rs
crates/discord/: Cargo.toml
crates/discord/src/: config.rs  handler.rs  lib.rs  markdown.rs  outbound.rs  plugin.rs  state.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: approval.rs  auth.rs  auth_middleware.rs  auth_routes.rs  channel.rs  channel_events.rs  chat.rs  lib.rs  mcp_health.rs  methods.rs  onboarding.rs  provider_setup.rs  push_routes.rs  server.rs  services.rs  session.rs  state.rs  voice.rs  ws.rs
crates/gateway/src/assets/: index.html  login.html  onboarding.html  style.css
crates/gateway/src/assets/css/: chat.css  components.css
crates/gateway/src/assets/js/: app.js  helpers.js  onboarding-app.js  onboarding-view.js  page-agents.js  page-channels.js  page-chat.js  page-crons.js  page-images.js  page-projects.js  page-settings.js  page-setup.js  projects.js  sessions.js  voice-input.js  websocket.js
crates/gateway/src/assets/js/components/: run-detail.js  session-header.js  session-list.js
crates/gateway/src/assets/js/stores/: session-store.js
crates/gateway/tests/: auth_middleware.rs  chat_ui.rs
crates/gateway/ui/: input.css
crates/gateway/ui/e2e/specs/: agents.spec.js  chat-input.spec.js  onboarding-auth.spec.js  onboarding-openai.spec.js  onboarding.spec.js  settings-nav.spec.js  smoke.spec.js  websocket.spec.js
crates/mcp/src/: sse_transport.rs
crates/oauth/src/: defaults.rs
crates/onboarding/src/: service.rs
crates/sessions/src/: message.rs  metadata.rs  store.rs
crates/slack/: Cargo.toml
crates/slack/src/: config.rs  lib.rs  markdown.rs  outbound.rs  plugin.rs  socket.rs  state.rs
crates/telegram/src/: handlers.rs  outbound.rs  plugin.rs
crates/tools/: Cargo.toml
crates/tools/src/: approval.rs  cron_tool.rs  exec.rs  lib.rs  sandbox.rs  sessions.rs  spawn_agent.rs  task_list.rs
crates/voice/src/: config.rs
crates/voice/src/tts/: openai.rs
crates/whatsapp/: Cargo.toml
crates/whatsapp-business/src/: outbound.rs  webhook.rs
crates/whatsapp/src/: access.rs  config.rs  connection.rs  handlers.rs  lib.rs  memory_store.rs  otp.rs  outbound.rs  plugin.rs  sled_store.rs  state.rs
crates/xmpp/: Cargo.toml
crates/xmpp/src/: access.rs  client.rs  config.rs  handlers.rs  lib.rs  outbound.rs  plugin.rs  stanza.rs  state.rs
crates/xmpp/src/xep/: chat_states.rs  http_upload.rs  mod.rs  muc.rs  oob.rs  reactions.rs
docs/: agent-presets.md  slack-discord-integration.md  voice.md
docs/design/: multi-agent-ui.md
docs/src/: SUMMARY.md  configuration.md  index.md  installation.md  quickstart.md  sandbox.md  system-prompt.md  voice.md  xmpp.md
plans/: encryption-at-rest-vault.md  proxy-credential-injection.md
scripts/: local-validate-pr.sh  local-validate.sh
