[package]
edition.workspace = true
name              = "moltis-config"
version.workspace = true

[dependencies]
anyhow         = { workspace = true }
directories    = { workspace = true }
moltis-common  = { workspace = true }
moltis-metrics = { optional = true, workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
thiserror      = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
metrics = ["dep:moltis-metrics"]

[lints]
workspace = true
