[package]
edition.workspace = true
name              = "moltis-slack"
version.workspace = true

[dependencies]
anyhow            = { workspace = true }
async-trait       = "0.1"
moltis-auto-reply = { workspace = true }
moltis-channels   = { workspace = true }
moltis-common     = { workspace = true }
reqwest           = { workspace = true }
secrecy           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
slack-morphism    = { version = "2.8", features = ["hyper", "axum"] }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
